package CarRent;

public abstract class AFuelCar extends ACar {

}
